--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#56248f",
-    "statusBar.background": "#56248f"
+    // "activityBar.background": "#56248f",
+    // "statusBar.background": "#56248f"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "files.exclude": {
