feat: Фильтр style: Кастомные чек-боксы

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "app:lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
