--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "app:start": "vite",
     "app:build:prod": "tsc && vite build",
     "app:preview:prod": "vite preview",
-    "app:lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "app:lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "clsx": "^2.0.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-checker": "^0.6.2",
