--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "app:build:prod": "tsc && vite build",
     "app:preview:prod": "vite preview",
     "app:lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "predeploy": "npm run build",
+    "predeploy": "npm run app:build:prod",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
